HIVE-29328: Orc footer fix